added more publications

--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -20,95 +20,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pub_date</th>\n",
-       "      <th>venue</th>\n",
-       "      <th>pub_details</th>\n",
-       "      <th>authors</th>\n",
-       "      <th>title</th>\n",
-       "      <th>citation</th>\n",
-       "      <th>url</th>\n",
-       "      <th>slug</th>\n",
-       "      <th>summary</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2013-09-23</td>\n",
-       "      <td>New Journal of Physics</td>\n",
-       "      <td>15 093033</td>\n",
-       "      <td>F. Font-Clos, G. Boleda, A. Corral</td>\n",
-       "      <td>A scaling law beyond Zipf's law and its relati...</td>\n",
-       "      <td>Font-Clos F, Boleda G and Corral A 2013 New J....</td>\n",
-       "      <td>http://iopscience.iop.org/1367-2630/15/9/093033</td>\n",
-       "      <td>scaling-zipf</td>\n",
-       "      <td>The dependence on text length of the statistic...</td>\n",
-       "      <td>The dependence on text length of the statistic...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2012-11-02</td>\n",
-       "      <td>Journal of Statistical Mechanics: Theory and E...</td>\n",
-       "      <td>11 P11003</td>\n",
-       "      <td>F. Font-Clos, F. Alessandro Massucci, I. Pérez...</td>\n",
-       "      <td>A weighted message-passing algorithm to estima...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://iopscience.iop.org/1742-5468/2012/11/P1...</td>\n",
-       "      <td>weighted-mpassing</td>\n",
-       "      <td>In this work we introduce a novel weighted mes...</td>\n",
-       "      <td>In this work we introduce a novel weighted mes...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     pub_date                                              venue pub_details  \\\n",
-       "0  2013-09-23                             New Journal of Physics   15 093033   \n",
-       "1  2012-11-02  Journal of Statistical Mechanics: Theory and E...   11 P11003   \n",
-       "\n",
-       "                                             authors  \\\n",
-       "0                 F. Font-Clos, G. Boleda, A. Corral   \n",
-       "1  F. Font-Clos, F. Alessandro Massucci, I. Pérez...   \n",
-       "\n",
-       "                                               title  \\\n",
-       "0  A scaling law beyond Zipf's law and its relati...   \n",
-       "1  A weighted message-passing algorithm to estima...   \n",
-       "\n",
-       "                                            citation  \\\n",
-       "0  Font-Clos F, Boleda G and Corral A 2013 New J....   \n",
-       "1                                                NaN   \n",
-       "\n",
-       "                                                 url               slug  \\\n",
-       "0    http://iopscience.iop.org/1367-2630/15/9/093033       scaling-zipf   \n",
-       "1  http://iopscience.iop.org/1742-5468/2012/11/P1...  weighted-mpassing   \n",
-       "\n",
-       "                                             summary  \\\n",
-       "0  The dependence on text length of the statistic...   \n",
-       "1  In this work we introduce a novel weighted mes...   \n",
-       "\n",
-       "                                         description  \n",
-       "0  The dependence on text length of the statistic...  \n",
-       "1  In this work we introduce a novel weighted mes...  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "CParserError",
+     "evalue": "Error tokenizing data. C error: Expected 10 fields in line 5, saw 11\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCParserError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-2bb36bef33d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0marticles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"publications.tsv\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\\t\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0marticles\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python2.7/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36mparser_f\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, escapechar, comment, encoding, dialect, tupleize_cols, error_bad_lines, warn_bad_lines, skip_footer, doublequote, delim_whitespace, as_recarray, compact_ints, use_unsigned, low_memory, buffer_lines, memory_map, float_precision)\u001b[0m\n\u001b[1;32m    527\u001b[0m                     skip_blank_lines=skip_blank_lines)\n\u001b[1;32m    528\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 529\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    530\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    531\u001b[0m     \u001b[0mparser_f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python2.7/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    303\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    304\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 305\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    306\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    307\u001b[0m _parser_defaults = {\n",
+      "\u001b[0;32m/usr/local/lib/python2.7/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m    761\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'skip_footer not supported for iteration'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    762\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 763\u001b[0;31m         \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    764\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    765\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'as_recarray'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python2.7/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   1211\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1212\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1213\u001b[0;31m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1214\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1215\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_first_chunk\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/parser.pyx\u001b[0m in \u001b[0;36mpandas.parser.TextReader.read (pandas/parser.c:7988)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/parser.pyx\u001b[0m in \u001b[0;36mpandas.parser.TextReader._read_low_memory (pandas/parser.c:8244)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/parser.pyx\u001b[0m in \u001b[0;36mpandas.parser.TextReader._read_rows (pandas/parser.c:8970)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/parser.pyx\u001b[0m in \u001b[0;36mpandas.parser.TextReader._tokenize_rows (pandas/parser.c:8838)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/parser.pyx\u001b[0m in \u001b[0;36mpandas.parser.raise_parser_error (pandas/parser.c:22649)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mCParserError\u001b[0m: Error tokenizing data. C error: Expected 10 fields in line 5, saw 11\n"
+     ]
     }
    ],
    "source": [
@@ -118,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -139,24 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'float' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-88129b631709>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mmd\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\"\\nvenue: '\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mhtml_escape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvenue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"'\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mmd\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\"\\npaperurl: '\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0murl\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"'\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mmd\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\"\\ncitation: '\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mhtml_escape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcitation\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"'\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0mmd\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\"\\n---\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mmd\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\"\\n\\n<a href='\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0murl\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"'>Download PDF here</a>\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-3c0059f29392>\u001b[0m in \u001b[0;36mhtml_escape\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mhtml_escape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;34m\"\"\"Produce entities within text.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhtml_escape_table\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'float' object is not iterable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "for row, item in articles.iterrows():\n",
@@ -182,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -191,25 +113,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--  1 fran  staff   1.5K Mar 25 16:37 2009-10-01-gnovis-habermas-understand-internet.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.3K Mar 25 16:37 2009-10-27-wikisym-social-roles-bots.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.4K Mar 25 16:37 2010-02-25-cscw-banning-vandal.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.5K Mar 25 16:37 2011-01-03-hicss-trace-ethnography.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.5K Mar 25 16:37 2011-10-05-wikisym-article-deletion.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.4K Mar 25 16:37 2011-11-01-cpov-lives-of-bots.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.6K Mar 25 16:37 2012-05-02-altchi-ipoxp.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.9K Mar 25 16:37 2012-06-05-icwsm-socialization-wikipedia.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.8K Mar 25 16:37 2012-08-29-wikisym-wikipedia-literate.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.8K Mar 25 16:37 2012-11-05-infoorg-artifacts-that-organize.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.8K Mar 25 16:37 2013-02-23-cscw-edit-sessions.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.8K Mar 25 16:37 2013-05-01-abs-rise-and-decline-wikipedia.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.9K Mar 25 16:37 2013-08-03-wikisym-levee-breaks-bots.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.8K Mar 25 16:37 2013-09-01-ecosoc-lter-students.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.5K Mar 25 16:37 2014-01-03-ics-bots-bespoke-code.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.9K Mar 25 16:37 2014-05-01-chi-snuggle-wikipedia.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.7K Mar 25 16:37 2014-09-10-jobem-old-against-new.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.7K Mar 25 16:37 2014-11-02-hcomp-values-in-crowdsourcing.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.9K Mar 25 16:37 2016-03-21-blockbots-ics.md\r\n",
+      "-rw-r--r--  1 fran  staff   1.6K Mar 25 17:57 2012-11-02-weighted-mpassing.md\r\n",
+      "-rw-r--r--  1 fran  staff   2.0K Mar 25 17:57 2013-09-23-scaling-zipf.md\r\n",
       "-rw-r--r--  1 fran  staff   493B Mar 25 15:48 readme.md\r\n"
      ]
     }
@@ -220,31 +125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---\r\n",
-      "title: \"Does Habermas Understand the Internet? The Algorithmic Construction of the Blogo/Public Sphere\"\r\n",
-      "collection: publication\r\n",
-      "permalink: /publication/2009-10-01-gnovis-habermas-understand-internet\r\n",
-      "excerpt: '<i>Published in Gnovis, 2009</i><br/>Habermasians have been debating about the role of the Internet in the public sphere, but they have all taken for granted the highly-automated software infrastructures that mediate our knowledge of the blogosphere.'\r\n",
-      "date: 2009-10-01\r\n",
-      "venue: 'Gnovis'\r\n",
-      "paperurl: 'http://www.stuartgeiger.com/papers/gnovis-habermas-blogopublic-sphere.pdf'\r\n",
-      "citation: 'Geiger, R. Stuart (2009). “Does Habermas Understand the Internet? The Algorithmic Construction of the Blogo/Public Sphere.” Gnovis: A Journal of Communication, Culture, and Technology. 10(1).  http://www.stuartgeiger.com/papers/gnovis-habermas-blogopublic-sphere.pdf'\r\n",
-      "---\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!head 2009-10-01-gnovis-habermas-understand-internet.md"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
