--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -20,30 +20,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "CParserError",
-     "evalue": "Error tokenizing data. C error: Expected 10 fields in line 5, saw 11\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCParserError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-2bb36bef33d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0marticles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"publications.tsv\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\\t\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0marticles\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36mparser_f\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, escapechar, comment, encoding, dialect, tupleize_cols, error_bad_lines, warn_bad_lines, skip_footer, doublequote, delim_whitespace, as_recarray, compact_ints, use_unsigned, low_memory, buffer_lines, memory_map, float_precision)\u001b[0m\n\u001b[1;32m    527\u001b[0m                     skip_blank_lines=skip_blank_lines)\n\u001b[1;32m    528\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 529\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    530\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    531\u001b[0m     \u001b[0mparser_f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    303\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    304\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 305\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    306\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    307\u001b[0m _parser_defaults = {\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m    761\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'skip_footer not supported for iteration'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    762\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 763\u001b[0;31m         \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    764\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    765\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'as_recarray'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   1211\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1212\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1213\u001b[0;31m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1214\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1215\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_first_chunk\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/parser.pyx\u001b[0m in \u001b[0;36mpandas.parser.TextReader.read (pandas/parser.c:7988)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/parser.pyx\u001b[0m in \u001b[0;36mpandas.parser.TextReader._read_low_memory (pandas/parser.c:8244)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/parser.pyx\u001b[0m in \u001b[0;36mpandas.parser.TextReader._read_rows (pandas/parser.c:8970)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/parser.pyx\u001b[0m in \u001b[0;36mpandas.parser.TextReader._tokenize_rows (pandas/parser.c:8838)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/parser.pyx\u001b[0m in \u001b[0;36mpandas.parser.raise_parser_error (pandas/parser.c:22649)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mCParserError\u001b[0m: Error tokenizing data. C error: Expected 10 fields in line 5, saw 11\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pub_date</th>\n",
+       "      <th>venue</th>\n",
+       "      <th>pub_details</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>title</th>\n",
+       "      <th>citation</th>\n",
+       "      <th>url</th>\n",
+       "      <th>slug</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-04-20</td>\n",
+       "      <td>Physical Review E</td>\n",
+       "      <td>91, 042122</td>\n",
+       "      <td>R. Garcia-Millan, F. Font-Clos, A. Corral</td>\n",
+       "      <td>Finite-size scaling of survival probability in...</td>\n",
+       "      <td>R. Garcia-Millan, F. Font-Clos, A. Corral, Phy...</td>\n",
+       "      <td>https://doi.org/10.1103/PhysRevE.91.042122</td>\n",
+       "      <td>finite-scaling-branching</td>\n",
+       "      <td>We investigate the survival probability of a G...</td>\n",
+       "      <td>Branching processes pervade many models in sta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014-07-25</td>\n",
+       "      <td>EPL (Europhysics Letters)</td>\n",
+       "      <td>107(3)</td>\n",
+       "      <td>O. Sagarra, F. Font-Clos, C. J. Pérez-Vicente,...</td>\n",
+       "      <td>The configuration multi-edge model: Assessing ...</td>\n",
+       "      <td>O. Sagarra, F. Font-Clos, C. J. Pérez-Vicente,...</td>\n",
+       "      <td>https://doi.org/10.1209/0295-5075/107/38002</td>\n",
+       "      <td>multi-edge-cmodel</td>\n",
+       "      <td>We examine the effect of fixing the strength s...</td>\n",
+       "      <td>Complex networks grow subject to structural co...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-09-23</td>\n",
+       "      <td>New Journal of Physics</td>\n",
+       "      <td>15 093033</td>\n",
+       "      <td>F. Font-Clos, G. Boleda, A. Corral</td>\n",
+       "      <td>A scaling law beyond Zipf's law and its relati...</td>\n",
+       "      <td>Font-Clos F, Boleda G and Corral A 2013 New J....</td>\n",
+       "      <td>http://iopscience.iop.org/1367-2630/15/9/093033</td>\n",
+       "      <td>scaling-zipf</td>\n",
+       "      <td>The dependence on text length of the statistic...</td>\n",
+       "      <td>The dependence on text length of the statistic...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-09-20</td>\n",
+       "      <td>Metabolites</td>\n",
+       "      <td>3(3)</td>\n",
+       "      <td>F. Alessandro Massucci, F. Font-Clos, I. Pérez...</td>\n",
+       "      <td>A Novel Methodology to Estimate Metabolic Flux...</td>\n",
+       "      <td>Massucci, F.A.; Font-Clos, F.; De Martino, A.;...</td>\n",
+       "      <td>http://www.mdpi.com/2218-1989/3/3/838</td>\n",
+       "      <td>metabolites-invited</td>\n",
+       "      <td>Constraint-based metabolic flux analysis descr...</td>\n",
+       "      <td>Constraint-based metabolic flux analysis descr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2012-11-02</td>\n",
+       "      <td>Journal of Statistical Mechanics: Theory and E...</td>\n",
+       "      <td>11 P11003</td>\n",
+       "      <td>F. Font-Clos, F. Alessandro Massucci, I. Pérez...</td>\n",
+       "      <td>A weighted message-passing algorithm to estima...</td>\n",
+       "      <td>Font-Clos F,</td>\n",
+       "      <td>http://iopscience.iop.org/1742-5468/2012/11/P1...</td>\n",
+       "      <td>weighted-mpassing</td>\n",
+       "      <td>In this work we introduce a novel weighted mes...</td>\n",
+       "      <td>In this work we introduce a novel weighted mes...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     pub_date                                              venue pub_details  \\\n",
+       "0  2015-04-20                                  Physical Review E  91, 042122   \n",
+       "1  2014-07-25                          EPL (Europhysics Letters)      107(3)   \n",
+       "2  2013-09-23                             New Journal of Physics   15 093033   \n",
+       "3  2013-09-20                                        Metabolites        3(3)   \n",
+       "4  2012-11-02  Journal of Statistical Mechanics: Theory and E...   11 P11003   \n",
+       "\n",
+       "                                             authors  \\\n",
+       "0          R. Garcia-Millan, F. Font-Clos, A. Corral   \n",
+       "1  O. Sagarra, F. Font-Clos, C. J. Pérez-Vicente,...   \n",
+       "2                 F. Font-Clos, G. Boleda, A. Corral   \n",
+       "3  F. Alessandro Massucci, F. Font-Clos, I. Pérez...   \n",
+       "4  F. Font-Clos, F. Alessandro Massucci, I. Pérez...   \n",
+       "\n",
+       "                                               title  \\\n",
+       "0  Finite-size scaling of survival probability in...   \n",
+       "1  The configuration multi-edge model: Assessing ...   \n",
+       "2  A scaling law beyond Zipf's law and its relati...   \n",
+       "3  A Novel Methodology to Estimate Metabolic Flux...   \n",
+       "4  A weighted message-passing algorithm to estima...   \n",
+       "\n",
+       "                                            citation  \\\n",
+       "0  R. Garcia-Millan, F. Font-Clos, A. Corral, Phy...   \n",
+       "1  O. Sagarra, F. Font-Clos, C. J. Pérez-Vicente,...   \n",
+       "2  Font-Clos F, Boleda G and Corral A 2013 New J....   \n",
+       "3  Massucci, F.A.; Font-Clos, F.; De Martino, A.;...   \n",
+       "4                                       Font-Clos F,   \n",
+       "\n",
+       "                                                 url  \\\n",
+       "0         https://doi.org/10.1103/PhysRevE.91.042122   \n",
+       "1        https://doi.org/10.1209/0295-5075/107/38002   \n",
+       "2    http://iopscience.iop.org/1367-2630/15/9/093033   \n",
+       "3              http://www.mdpi.com/2218-1989/3/3/838   \n",
+       "4  http://iopscience.iop.org/1742-5468/2012/11/P1...   \n",
+       "\n",
+       "                       slug  \\\n",
+       "0  finite-scaling-branching   \n",
+       "1         multi-edge-cmodel   \n",
+       "2              scaling-zipf   \n",
+       "3       metabolites-invited   \n",
+       "4         weighted-mpassing   \n",
+       "\n",
+       "                                             summary  \\\n",
+       "0  We investigate the survival probability of a G...   \n",
+       "1  We examine the effect of fixing the strength s...   \n",
+       "2  The dependence on text length of the statistic...   \n",
+       "3  Constraint-based metabolic flux analysis descr...   \n",
+       "4  In this work we introduce a novel weighted mes...   \n",
+       "\n",
+       "                                         description  \n",
+       "0  Branching processes pervade many models in sta...  \n",
+       "1  Complex networks grow subject to structural co...  \n",
+       "2  The dependence on text length of the statistic...  \n",
+       "3  Constraint-based metabolic flux analysis descr...  \n",
+       "4  In this work we introduce a novel weighted mes...  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -53,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -104,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -113,8 +245,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--  1 fran  staff   1.6K Mar 25 17:57 2012-11-02-weighted-mpassing.md\r\n",
-      "-rw-r--r--  1 fran  staff   2.0K Mar 25 17:57 2013-09-23-scaling-zipf.md\r\n",
+      "-rw-r--r--  1 fran  staff   1.6K Mar 25 23:52 2012-11-02-weighted-mpassing.md\r\n",
+      "-rw-r--r--  1 fran  staff   1.5K Mar 25 23:52 2013-09-20-metabolites-invited.md\r\n",
+      "-rw-r--r--  1 fran  staff   2.0K Mar 25 23:52 2013-09-23-scaling-zipf.md\r\n",
+      "-rw-r--r--  1 fran  staff   1.7K Mar 25 23:52 2014-07-25-multi-edge-cmodel.md\r\n",
+      "-rw-r--r--  1 fran  staff   1.7K Mar 25 23:52 2015-04-20-finite-scaling-branching.md\r\n",
       "-rw-r--r--  1 fran  staff   493B Mar 25 15:48 readme.md\r\n"
      ]
     }
