--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,9 @@
        "      <th>authors</th>\n",
        "      <th>title</th>\n",
        "      <th>citation</th>\n",
-       "      <th>url</th>\n",
+       "      <th>journalurl</th>\n",
+       "      <th>arxivurl</th>\n",
+       "      <th>pdfurl</th>\n",
        "      <th>slug</th>\n",
        "      <th>summary</th>\n",
        "      <th>description</th>\n",
@@ -55,6 +57,8 @@
        "      <td>Finite-size scaling of survival probability in...</td>\n",
        "      <td>R. Garcia-Millan, F. Font-Clos, A. Corral, Phy...</td>\n",
        "      <td>https://doi.org/10.1103/PhysRevE.91.042122</td>\n",
+       "      <td>https://arxiv.org/abs/1411.2817</td>\n",
+       "      <td>https://fontclos.github.io/files/Garcia-Millan...</td>\n",
        "      <td>finite-scaling-branching</td>\n",
        "      <td>We investigate the survival probability of a G...</td>\n",
        "      <td>Branching processes pervade many models in sta...</td>\n",
@@ -68,6 +72,8 @@
        "      <td>The configuration multi-edge model: Assessing ...</td>\n",
        "      <td>O. Sagarra, F. Font-Clos, C. J. Pérez-Vicente,...</td>\n",
        "      <td>https://doi.org/10.1209/0295-5075/107/38002</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td>multi-edge-cmodel</td>\n",
        "      <td>We examine the effect of fixing the strength s...</td>\n",
        "      <td>Complex networks grow subject to structural co...</td>\n",
@@ -81,6 +87,8 @@
        "      <td>A scaling law beyond Zipf's law and its relati...</td>\n",
        "      <td>Font-Clos F, Boleda G and Corral A 2013 New J....</td>\n",
        "      <td>http://iopscience.iop.org/1367-2630/15/9/093033</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td>scaling-zipf</td>\n",
        "      <td>The dependence on text length of the statistic...</td>\n",
        "      <td>The dependence on text length of the statistic...</td>\n",
@@ -94,6 +102,8 @@
        "      <td>A Novel Methodology to Estimate Metabolic Flux...</td>\n",
        "      <td>Massucci, F.A.; Font-Clos, F.; De Martino, A.;...</td>\n",
        "      <td>http://www.mdpi.com/2218-1989/3/3/838</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td>metabolites-invited</td>\n",
        "      <td>Constraint-based metabolic flux analysis descr...</td>\n",
        "      <td>Constraint-based metabolic flux analysis descr...</td>\n",
@@ -107,6 +117,8 @@
        "      <td>A weighted message-passing algorithm to estima...</td>\n",
        "      <td>Font-Clos F,</td>\n",
        "      <td>http://iopscience.iop.org/1742-5468/2012/11/P1...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td>weighted-mpassing</td>\n",
        "      <td>In this work we introduce a novel weighted mes...</td>\n",
        "      <td>In this work we introduce a novel weighted mes...</td>\n",
@@ -144,12 +156,26 @@
        "3  Massucci, F.A.; Font-Clos, F.; De Martino, A.;...   \n",
        "4                                       Font-Clos F,   \n",
        "\n",
-       "                                                 url  \\\n",
+       "                                          journalurl  \\\n",
        "0         https://doi.org/10.1103/PhysRevE.91.042122   \n",
        "1        https://doi.org/10.1209/0295-5075/107/38002   \n",
        "2    http://iopscience.iop.org/1367-2630/15/9/093033   \n",
        "3              http://www.mdpi.com/2218-1989/3/3/838   \n",
        "4  http://iopscience.iop.org/1742-5468/2012/11/P1...   \n",
+       "\n",
+       "                          arxivurl  \\\n",
+       "0  https://arxiv.org/abs/1411.2817   \n",
+       "1                                    \n",
+       "2                                    \n",
+       "3                                    \n",
+       "4                                    \n",
+       "\n",
+       "                                              pdfurl  \\\n",
+       "0  https://fontclos.github.io/files/Garcia-Millan...   \n",
+       "1                                                      \n",
+       "2                                                      \n",
+       "3                                                      \n",
+       "4                                                      \n",
        "\n",
        "                       slug  \\\n",
        "0  finite-scaling-branching   \n",
@@ -173,7 +199,7 @@
        "4  In this work we introduce a novel weighted mes...  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -206,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -223,10 +249,12 @@
     "    md += \"\\nexcerpt: '<i>Published in \" + item.venue + \", \" + str(year) + \"</i><br/>\" + html_escape(item.summary) + \"'\"\n",
     "    md += \"\\ndate: \" + str(item.pub_date) \n",
     "    md += \"\\nvenue: '\" + html_escape(item.venue) + \"'\"\n",
-    "    md += \"\\npaperurl: '\" + item.url + \"'\"\n",
+    "    md += \"\\njournalurl: '\" + item.journalurl + \"'\"\n",
+    "    md += \"\\npdfurl: '\" + item.pdfurl + \"'\"\n",
+    "    md += \"\\narxivurl: '\" + item.arxivurl + \"'\"\n",
     "    md += \"\\ncitation: '\" + html_escape(item.citation) + \"'\"\n",
     "    md += \"\\n---\"\n",
-    "    md += \"\\n\\n<a href='\" + item.url + \"'>Download PDF here</a>\\n\" \n",
+    "    #md += \"\\n\\n<a href='\" + item.url + \"'>Download PDF here</a>\\n\" \n",
     "    md += \"\\nAbstract: \" + html_escape(item.description) + \"\\n\"\n",
     "    md += \"\\n Recommended citation: \" + item.citation\n",
     "    md_filename = os.path.basename(md_filename)\n",
@@ -236,24 +264,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-rw-r--r--  1 fran  staff   1.6K Mar 25 23:52 2012-11-02-weighted-mpassing.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.5K Mar 25 23:52 2013-09-20-metabolites-invited.md\r\n",
-      "-rw-r--r--  1 fran  staff   2.0K Mar 25 23:52 2013-09-23-scaling-zipf.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.7K Mar 25 23:52 2014-07-25-multi-edge-cmodel.md\r\n",
-      "-rw-r--r--  1 fran  staff   1.7K Mar 25 23:52 2015-04-20-finite-scaling-branching.md\r\n",
-      "-rw-r--r--  1 fran  staff   493B Mar 25 15:48 readme.md\r\n"
-     ]
+     "data": {
+      "text/plain": [
+       "pub_date                                              2012-11-02\n",
+       "venue          Journal of Statistical Mechanics: Theory and E...\n",
+       "pub_details                                            11 P11003\n",
+       "authors        F. Font-Clos, F. Alessandro Massucci, I. Pérez...\n",
+       "title          A weighted message-passing algorithm to estima...\n",
+       "citation                                            Font-Clos F,\n",
+       "journalurl     http://iopscience.iop.org/1742-5468/2012/11/P1...\n",
+       "arxivurl                                                        \n",
+       "pdfurl                                                          \n",
+       "slug                                           weighted-mpassing\n",
+       "summary        In this work we introduce a novel weighted mes...\n",
+       "description    In this work we introduce a novel weighted mes...\n",
+       "Name: 4, dtype: object"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "!ls -lah *.md"
    ]
