--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -298,11 +298,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-rw-r--r--  1 fran  staff   1.5K Mar 26 00:37 2012-11-02-weighted-mpassing.md\r\n",
+      "-rw-r--r--  1 fran  staff   1.5K Mar 26 00:37 2013-09-20-metabolites-invited.md\r\n",
+      "-rw-r--r--  1 fran  staff   1.9K Mar 26 00:37 2013-09-23-scaling-zipf.md\r\n",
+      "-rw-r--r--  1 fran  staff   1.7K Mar 26 00:37 2014-07-25-multi-edge-cmodel.md\r\n",
+      "-rw-r--r--  1 fran  staff   1.8K Mar 26 00:37 2015-04-20-finite-scaling-branching.md\r\n",
+      "-rw-r--r--  1 fran  staff   493B Mar 25 15:48 readme.md\r\n"
+     ]
+    }
+   ],
    "source": [
     "!ls -lah *.md"
    ]
