--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -246,7 +246,7 @@
     "    md = \"---\\ntitle: \\\"\"   + item.title + '\"\\n'\n",
     "    \n",
     "    md += \"\"\"collection: publication\\npermalink: /publication/\"\"\" + html_filename\n",
-    "    md += \"\\nexcerpt: '<i>Published in \" + item.venue + \", \" + str(year) + \"</i><br/>\" + html_escape(item.summary) + \"'\"\n",
+    "    #md += \"\\nexcerpt: '<i>Published in \" + item.venue + \", \" + str(year) + \"</i><br/>\" + html_escape(item.summary) + \"'\"\n",
     "    md += \"\\ndate: \" + str(item.pub_date) \n",
     "    md += \"\\nvenue: '\" + html_escape(item.venue) + \"'\"\n",
     "    md += \"\\njournalurl: '\" + item.journalurl + \"'\"\n",
