--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -72,8 +72,8 @@
        "      <td>The configuration multi-edge model: Assessing ...</td>\n",
        "      <td>O. Sagarra, F. Font-Clos, C. J. Pérez-Vicente,...</td>\n",
        "      <td>https://doi.org/10.1209/0295-5075/107/38002</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>multi-edge-cmodel</td>\n",
        "      <td>We examine the effect of fixing the strength s...</td>\n",
        "      <td>Complex networks grow subject to structural co...</td>\n",
@@ -87,8 +87,8 @@
        "      <td>A scaling law beyond Zipf's law and its relati...</td>\n",
        "      <td>Font-Clos F, Boleda G and Corral A 2013 New J....</td>\n",
        "      <td>http://iopscience.iop.org/1367-2630/15/9/093033</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>scaling-zipf</td>\n",
        "      <td>The dependence on text length of the statistic...</td>\n",
        "      <td>The dependence on text length of the statistic...</td>\n",
@@ -102,8 +102,8 @@
        "      <td>A Novel Methodology to Estimate Metabolic Flux...</td>\n",
        "      <td>Massucci, F.A.; Font-Clos, F.; De Martino, A.;...</td>\n",
        "      <td>http://www.mdpi.com/2218-1989/3/3/838</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>metabolites-invited</td>\n",
        "      <td>Constraint-based metabolic flux analysis descr...</td>\n",
        "      <td>Constraint-based metabolic flux analysis descr...</td>\n",
@@ -117,8 +117,8 @@
        "      <td>A weighted message-passing algorithm to estima...</td>\n",
        "      <td>Font-Clos F,</td>\n",
        "      <td>http://iopscience.iop.org/1742-5468/2012/11/P1...</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>weighted-mpassing</td>\n",
        "      <td>In this work we introduce a novel weighted mes...</td>\n",
        "      <td>In this work we introduce a novel weighted mes...</td>\n",
@@ -165,17 +165,17 @@
        "\n",
        "                          arxivurl  \\\n",
        "0  https://arxiv.org/abs/1411.2817   \n",
-       "1                                    \n",
-       "2                                    \n",
-       "3                                    \n",
-       "4                                    \n",
+       "1                              NaN   \n",
+       "2                              NaN   \n",
+       "3                              NaN   \n",
+       "4                              NaN   \n",
        "\n",
        "                                              pdfurl  \\\n",
        "0  https://fontclos.github.io/files/Garcia-Millan...   \n",
-       "1                                                      \n",
-       "2                                                      \n",
-       "3                                                      \n",
-       "4                                                      \n",
+       "1                                                NaN   \n",
+       "2                                                NaN   \n",
+       "3                                                NaN   \n",
+       "4                                                NaN   \n",
        "\n",
        "                       slug  \\\n",
        "0  finite-scaling-branching   \n",
@@ -199,7 +199,7 @@
        "4  In this work we introduce a novel weighted mes...  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -232,11 +232,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "cannot concatenate 'str' and 'float' objects",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-70-6d027a6cece4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0mmd\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\"\\njournalurl: '\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjournalurl\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"'\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m\"pdfurl\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0mmd\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\"\\npdfurl: '\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpdfurl\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"'\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m\"arxivurl\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0mmd\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\"\\narxivurl: '\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marxivurl\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"'\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: cannot concatenate 'str' and 'float' objects"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "for row, item in articles.iterrows():\n",
@@ -249,10 +261,14 @@
     "    #md += \"\\nexcerpt: '<i>Published in \" + item.venue + \", \" + str(year) + \"</i><br/>\" + html_escape(item.summary) + \"'\"\n",
     "    md += \"\\ndate: \" + str(item.pub_date) \n",
     "    md += \"\\nvenue: '\" + html_escape(item.venue) + \"'\"\n",
-    "    md += \"\\njournalurl: '\" + item.journalurl + \"'\"\n",
-    "    md += \"\\npdfurl: '\" + item.pdfurl + \"'\"\n",
-    "    md += \"\\narxivurl: '\" + item.arxivurl + \"'\"\n",
-    "    md += \"\\ncitation: '\" + html_escape(item.citation) + \"'\"\n",
+    "    if type(item.)\n",
+    "        md += \"\\njournalurl: '\" + item.journalurl + \"'\"\n",
+    "    if \"pdfurl\" in item.index:\n",
+    "        md += \"\\npdfurl: '\" + item.pdfurl + \"'\"\n",
+    "    if \"arxivurl\" in item.index:\n",
+    "        md += \"\\narxivurl: '\" + item.arxivurl + \"'\"\n",
+    "    if \"citation\" in item.index:\n",
+    "        md += \"\\ncitation: '\" + html_escape(item.citation) + \"'\"\n",
     "    md += \"\\n---\"\n",
     "    #md += \"\\n\\n<a href='\" + item.url + \"'>Download PDF here</a>\\n\" \n",
     "    md += \"\\nAbstract: \" + html_escape(item.description) + \"\\n\"\n",
@@ -264,9 +280,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(item.citation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
